--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Notícias automotiva</h1>
+    <h1 class="display-4">Muscle car</h1>
         
 </div>
 <div class="text-center">
@@ -22,4 +22,12 @@
 <b>Interior</b>
 <p>No seu painel de instrumentos foram trocadas as posições de velocímetro e tacômetro, e todos os seus componentes metálicos foram acetinados e não cromados.</p>
 
+<img src="~/images/Photo01.jpg" />
+
+<br/>
+
+<img src="~/images/Photo02.jpg" height="800" width="1200" />
+
+
 </div>
+
